<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
      <!-- Login Title -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center_horizontal"
        android:textSize="20sp" 
        />
    <!-- layout for Username -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >
     
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/username"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1.0"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    <!-- layout for Password -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/password"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1.0"
            android:inputType="textPassword" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal"
	    android:padding="10dp" >

    <Button
        android:id="@+id/login"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/clear"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>